data ingestion pipeline

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,64 +174,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-10-21 22:08:41,678: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-10-21 22:08:41,681: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-10-21 22:08:41,683: INFO: common: created directory at: artifacts]\n",
-      "[2024-10-21 22:08:41,685: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2024-10-21 22:08:48,831: INFO: 4037744573: artifacts/data_ingestion/data.zip download! with following info: \n",
-      "Cache-Control: private\n",
-      "Content-Length: 276120\n",
-      "Content-Type: text/html; charset=utf-8\n",
-      "P3P: CP=\"ALL IND DSP COR ADM CONo CUR CUSo IVAo IVDo PSA PSD TAI TELo OUR SAMo CNT COM INT NAV ONL PHY PRE PUR UNI\"\n",
-      "WWW-Authenticate: Wlid1.1 realm=\"WindowsLive\", fault=\"BadContextToken\", policy=\"MBI_SSL\", ver=\"7.5.0.0\", target=\"ssl.live.com\", siteId=\"ssl.live.com\"\n",
-      "X-NetworkStatistics: 0,525568,0,0,31452,0,83497,3\n",
-      "X-SharePointHealthScore: 1\n",
-      "Content-Security-Policy: frame-ancestors 'self' sentry.contentvalidation.com sentry.ppe.contentvalidation.com sentry.int.contentvalidation.com\n",
-      "X-AspNet-Version: 4.0.30319\n",
-      "X-DataBoundary: EU\n",
-      "X-1DSCollectorUrl: https://eu-mobile.events.data.microsoft.com/OneCollector/1.0/\n",
-      "X-AriaCollectorURL: https://eu-mobile.events.data.microsoft.com/Collector/3.0\n",
-      "SPRequestGuid: 60315ca1-503b-a000-326d-e42457bc1036\n",
-      "request-id: 60315ca1-503b-a000-326d-e42457bc1036\n",
-      "MS-CV: oVwxYDtQAKAybeQkV7wQNg.0\n",
-      "Alt-Svc: h3=\":443\";ma=86400\n",
-      "Strict-Transport-Security: max-age=31536000\n",
-      "X-FRAME-OPTIONS: SAMEORIGIN\n",
-      "Content-Security-Policy: frame-ancestors 'self' teams.microsoft.com *.teams.microsoft.com *.skype.com *.teams.microsoft.us local.teams.office.com teams.cloud.microsoft *.office365.com goals.cloud.microsoft *.powerapps.com app.powerbi.com *.yammer.com engage.cloud.microsoft word.cloud.microsoft excel.cloud.microsoft powerpoint.cloud.microsoft *.officeapps.live.com *.office.com *.microsoft365.com *.stream.azure-test.net *.microsoftstream.com *.dynamics.com *.microsoft.com onedrive.live.com *.onedrive.live.com securebroker.sharepointonline.com;\n",
-      "SPRequestDuration: 822\n",
-      "SPIisLatency: 17\n",
-      "X-Powered-By: ASP.NET\n",
-      "MicrosoftSharePointTeamServices: 16.0.0.25402\n",
-      "X-Content-Type-Options: nosniff\n",
-      "X-MS-InvokeApp: 1; RequireReadOnly\n",
-      "X-Cache: CONFIG_NOCACHE\n",
-      "X-MSEdge-Ref: Ref A: FCB54FA3F7494B379F451B9B31ED6DC2 Ref B: LON21EDGE1421 Ref C: 2024-10-21T21:08:44Z\n",
-      "Date: Mon, 21 Oct 2024 21:08:44 GMT\n",
+      "[2024-10-24 20:46:46,722: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-10-24 20:46:46,724: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-10-24 20:46:46,732: INFO: common: created directory at: artifacts]\n",
+      "[2024-10-24 20:46:46,734: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2024-10-24 20:47:09,280: INFO: 4037744573: artifacts/data_ingestion/data.zip download! with following info: \n",
+      "x-amz-id-2: AePOQoapjvWKTk9V912lGCVykOsE736LIXnEBGKTUXORvEJgJOkd2dJIvwKwaHwGZwW6g5D92xU=\n",
+      "x-amz-request-id: VSWB1R46YSC8NTCX\n",
+      "Date: Thu, 24 Oct 2024 19:46:48 GMT\n",
+      "Last-Modified: Wed, 23 Oct 2024 19:43:24 GMT\n",
+      "ETag: \"7c6b02e7e313290fa5357aeb08f93afc-7\"\n",
+      "x-amz-server-side-encryption: AES256\n",
+      "Accept-Ranges: bytes\n",
+      "Content-Type: application/zip\n",
+      "Content-Length: 105537273\n",
+      "Server: AmazonS3\n",
       "Connection: close\n",
       "\n",
       "]\n"
-     ]
-    },
-    {
-     "ename": "BadZipFile",
-     "evalue": "File is not a zip file",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mBadZipFile\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m     data_ingestion\u001b[38;5;241m.\u001b[39mextract_zip_file()\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m----> 9\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[12], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m     data_ingestion \u001b[38;5;241m=\u001b[39m DataIngestion(config\u001b[38;5;241m=\u001b[39mdata_ingestion_config)\n\u001b[0;32m      6\u001b[0m     data_ingestion\u001b[38;5;241m.\u001b[39mdownload_file()\n\u001b[1;32m----> 7\u001b[0m     \u001b[43mdata_ingestion\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mextract_zip_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[11], line 27\u001b[0m, in \u001b[0;36mDataIngestion.extract_zip_file\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     25\u001b[0m unzip_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39munzip_dir\n\u001b[0;32m     26\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(unzip_path, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m---> 27\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mzipfile\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mZipFile\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlocal_data_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m zip_ref:\n\u001b[0;32m     28\u001b[0m     zip_ref\u001b[38;5;241m.\u001b[39mextractall(unzip_path)\n",
-      "File \u001b[1;32mc:\\Users\\midem\\.conda\\envs\\bldvenv2\\lib\\zipfile.py:1272\u001b[0m, in \u001b[0;36mZipFile.__init__\u001b[1;34m(self, file, mode, compression, allowZip64, compresslevel, strict_timestamps)\u001b[0m\n\u001b[0;32m   1270\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m   1271\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m mode \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m-> 1272\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_RealGetContents\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1273\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m mode \u001b[38;5;129;01min\u001b[39;00m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m   1274\u001b[0m         \u001b[38;5;66;03m# set the modified flag so central directory gets written\u001b[39;00m\n\u001b[0;32m   1275\u001b[0m         \u001b[38;5;66;03m# even if no files are added to the archive\u001b[39;00m\n\u001b[0;32m   1276\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_didModify \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\midem\\.conda\\envs\\bldvenv2\\lib\\zipfile.py:1339\u001b[0m, in \u001b[0;36mZipFile._RealGetContents\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1337\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m BadZipFile(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile is not a zip file\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1338\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m endrec:\n\u001b[1;32m-> 1339\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m BadZipFile(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile is not a zip file\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1340\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdebug \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   1341\u001b[0m     \u001b[38;5;28mprint\u001b[39m(endrec)\n",
-      "\u001b[1;31mBadZipFile\u001b[0m: File is not a zip file"
      ]
     }
    ],
