Prepare base model completed

--- a/research/02_prepare_base_model.ipynb
+++ b/research/02_prepare_base_model.ipynb
@@ -64,6 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Entity update\n",
     "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
     "\n",
@@ -86,6 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Configuration manager update\n",
     "from bloodcellClassifier.constants import *\n",
     "from bloodcellClassifier.utils.common import read_yaml, create_directories"
    ]
@@ -131,6 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Update component - prepare_base_model.py\n",
     "import os\n",
     "import urllib.request as request\n",
     "from zipfile import ZipFile\n",
