prepare callbacks completed

--- a/research/02_prepare_base_model.ipynb
+++ b/research/02_prepare_base_model.ipynb
@@ -388,6 +388,7 @@
     }
    ],
    "source": [
+    "# Prepare base model pipeline\n",
     "try:\n",
     "    config = ConfigurationManager()\n",
     "    prepare_base_model_config = config.get_prepare_base_model_config()\n",
