training stage added

--- a/research/02_prepare_base_model.ipynb
+++ b/research/02_prepare_base_model.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
     "    \n",
     "    @staticmethod\n",
     "    def save_model(path: Path, model: tf.keras.Model):\n",
-    "        model.save(path)\n"
+    "        model.save(path, include_optimizer=True)\n"
    ]
   },
   {
