update to training notebook

--- a/research/04_training.ipynb
+++ b/research/04_training.ipynb
@@ -313,6 +313,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    prepare_callbacks_config = config.get_prepare_callback_config()\n",
+    "    prepare_callbacks = PrepareCallback(config=prepare_callbacks_config)\n",
+    "    callback_list = prepare_callbacks.get_tb_ckpt_callbacks()\n",
+    "\n",
+    "    training_config = config.get_training_config()\n",
+    "    training = Training(config=training_config)\n",
+    "    training.get_base_model()\n",
+    "    #training.model.summary()\n",
+    "    training.train_valid_generator()\n",
+    "    training.train(\n",
+    "       callback_list=callback_list\n",
+    "    )\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training notebook ends here"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -560,78 +592,6 @@
     "            validation_data=valid_gene,\n",
     "            callbacks=callback_list\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2024-10-30 22:44:24,930: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-10-30 22:44:24,930: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-10-30 22:44:24,942: INFO: common: created directory at: artifacts]\n",
-      "[2024-10-30 22:44:24,946: INFO: common: created directory at: artifacts\\prepare_callbacks\\checkpoint_dir]\n",
-      "[2024-10-30 22:44:24,946: INFO: common: created directory at: artifacts\\prepare_callbacks\\tensorboard_log_dir]\n",
-      "[2024-10-30 22:44:24,946: INFO: common: created directory at: artifacts\\training]\n",
-      "[2024-10-30 22:44:25,425: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
-      "Found 1989 images belonging to 4 classes.\n",
-      "Found 7968 images belonging to 4 classes.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\midem\\.conda\\envs\\bldvenv2\\lib\\site-packages\\keras\\src\\trainers\\data_adapters\\py_dataset_adapter.py:121: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
-      "  self._warn_if_super_not_called()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m498/498\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.2639 - loss: 22.2584"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\midem\\.conda\\envs\\bldvenv2\\lib\\site-packages\\keras\\src\\trainers\\data_adapters\\py_dataset_adapter.py:121: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
-      "  self._warn_if_super_not_called()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m498/498\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1239s\u001b[0m 2s/step - accuracy: 0.2640 - loss: 22.2556 - val_accuracy: 0.2802 - val_loss: 17.0663\n",
-      "[2024-10-30 23:05:06,397: WARNING: saving_api: You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "try:\n",
-    "    config = ConfigurationManager()\n",
-    "    prepare_callbacks_config = config.get_prepare_callback_config()\n",
-    "    prepare_callbacks = PrepareCallback(config=prepare_callbacks_config)\n",
-    "    callback_list = prepare_callbacks.get_tb_ckpt_callbacks()\n",
-    "\n",
-    "    training_config = config.get_training_config()\n",
-    "    training = Training(config=training_config)\n",
-    "    training.get_base_model()\n",
-    "    #training.model.summary()\n",
-    "    training.train_valid_generator()\n",
-    "    training.train(\n",
-    "       callback_list=callback_list\n",
-    "    )\n",
-    "    \n",
-    "except Exception as e:\n",
-    "    raise e"
    ]
   }
  ],
